[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/audio/dialogs/test/mission_test3_2.mp3" type="AudioStream" id=1]
[ext_resource path="res://scripts/missions/MissionTrigger.gd" type="Script" id=2]
[ext_resource path="res://scripts/dialogs/DialogPart.gd" type="Script" id=3]
[ext_resource path="res://art/audio/dialogs/test/mission_test3_5.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/tools/dialogManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/npc/predefinedNpcPath.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/npc/npcRigid.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/audio/dialogs/test/mission_test3_4.mp3" type="AudioStream" id=8]
[ext_resource path="res://art/audio/dialogs/test/mission_test3_3.mp3" type="AudioStream" id=9]
[ext_resource path="res://art/audio/dialogs/test/mission_test3_1.mp3" type="AudioStream" id=10]

[node name="MissionTriggerTest1" type="Node"]
script = ExtResource( 2 )

[node name="predefinedNpcPath" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -58 )

[node name="dialogManager" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.31791, -58 )

[node name="DialogPart" type="Node" parent="dialogManager"]
script = ExtResource( 3 )
dialog_audio = ExtResource( 10 )

[node name="DialogPart2" type="Node" parent="dialogManager"]
script = ExtResource( 3 )
character_talking = 1
dialog_audio = ExtResource( 1 )

[node name="DialogPart3" type="Node" parent="dialogManager"]
script = ExtResource( 3 )
dialog_audio = ExtResource( 9 )

[node name="DialogPart4" type="Node" parent="dialogManager"]
script = ExtResource( 3 )
character_talking = 1
dialog_audio = ExtResource( 8 )

[node name="DialogPart5" type="Node" parent="dialogManager"]
script = ExtResource( 3 )
dialog_audio = ExtResource( 4 )
intro_delay = 1.0

[node name="npcRigid" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 2.039, -58 )
